--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,6 +24,24 @@ body.sticky-bottom-footer {
 
 .container {
   max-width: $max-content-width;
+  
+  // Better responsive behavior for blog posts
+  @media (min-width: 1200px) {
+    max-width: min(90vw, $max-content-width);
+  }
+  
+  @media (max-width: 768px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+// Enhanced container for distill posts
+.post {
+  .container {
+    max-width: none;
+    width: 100%;
+  }
 }
 
 // Profile
