--- a/_includes/header.html
+++ b/_includes/header.html
@@ -108,8 +108,7 @@
                     {% endfor %}
                   </div>
                 </li>
-              {%- else %}
-              <li class="nav-item {% if page.title == p.title %}active{% endif %}">
+              {%- else %}              <li class="nav-item {% if page.title == p.title %}active{% endif %}">
                 <a class="nav-link" href="{{ p.url | relative_url }}">{{ p.title }}
                   {%- if page.title == p.title -%}
                   <span class="sr-only">(current)</span>
