--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -27,7 +27,7 @@ body.sticky-bottom-footer {
   
   // Better responsive behavior for blog posts
   @media (min-width: 1200px) {
-    max-width: min(90vw, $max-content-width);
+    max-width: $max-content-width;
   }
   
   @media (max-width: 768px) {
@@ -39,8 +39,10 @@ body.sticky-bottom-footer {
 // Enhanced container for distill posts
 .post {
   .container {
-    max-width: none;
+    max-width: 100%;
     width: 100%;
+    padding: 0;
+    margin: 0;
   }
 }
 
