--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,11 +106,11 @@ body.sticky-bottom-footer {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1500px;
 }
 @media (min-width: 1200px) {
   .container {
-    max-width: min(90vw, 1200px);
+    max-width: 1500px;
   }
 }
 @media (max-width: 768px) {
@@ -121,8 +121,10 @@ body.sticky-bottom-footer {
 }
 
 .post .container {
-  max-width: none;
+  max-width: 100%;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .profile img {
@@ -728,7 +730,22 @@ html.transition *:after {
  * Style overrides for distill blog posts.
  ******************************************************************************/
 d-byline {
+  grid-template-columns: 0.1fr !important;
+}
+d-byline .authors-affiliations {
+  grid-column: 1 !important;
+}
+d-byline .published-info {
+  grid-column: 2 !important;
+  text-align: right !important;
+}
+d-byline .affiliations {
+  display: none !important;
+}
+
+d-byline {
   border-top-color: var(--global-divider-color) !important;
+  border-bottom: none !important;
 }
 
 d-byline h3 {
@@ -743,7 +760,11 @@ d-byline a:hover, d-article d-byline a:hover {
 }
 
 d-article {
-  border-top-color: var(--global-divider-color) !important;
+  display: block;
+  max-width: 1250px;
+  margin: 0 auto;
+  padding: 2em;
+  border-top: 1px solid var(--global-divider-color) !important;
 }
 d-article a, d-article p, d-article h1, d-article h2, d-article h3, d-article h4, d-article h5, d-article h6, d-article li, d-article table {
   color: var(--global-text-color) !important;
@@ -758,55 +779,7 @@ d-article b i {
   display: inline;
 }
 d-article d-contents {
-  align-self: start;
-  grid-column: 1/4;
-  grid-row: auto/span 4;
-  justify-self: end;
-  margin-top: 0em;
-  padding-left: 2em;
-  padding-right: 3em;
-  border-right: 1px solid var(--global-divider-color);
-  width: max(70%, 300px);
-  margin-right: 0px;
-  margin-top: 0em;
-  display: grid;
-  grid-template-columns: minmax(8px, 1fr) [toc] auto minmax(8px, 1fr) [toc-line] 1px minmax(32px, 2fr);
-}
-d-article d-contents nav {
-  grid-column: toc;
-}
-d-article d-contents nav a {
-  border-bottom: none !important;
-}
-d-article d-contents nav a:hover {
-  border-bottom: 1px solid var(--global-text-color) !important;
-}
-d-article d-contents nav h3 {
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-d-article d-contents nav div {
-  display: block;
-  outline: none;
-  margin-bottom: 0.8em;
-  color: rgba(0, 0, 0, 0.8);
-  font-weight: bold;
-}
-d-article d-contents nav ul {
-  padding-left: 1em;
-  margin-top: 0;
-  margin-bottom: 6px;
-  list-style-type: none;
-}
-d-article d-contents nav ul li {
-  margin-bottom: 0.25em;
-}
-d-article d-contents .figcaption {
-  line-height: 1.4em;
-}
-d-article d-contents toc-line {
-  border-right: 1px solid var(--global-divider-color);
-  grid-column: toc-line;
+  display: none;
 }
 d-article d-footnote {
   scroll-margin-top: 66px;
