--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -51,7 +51,7 @@
         else academicLFI = academicLFI[0];
       }
       let academicTemplate = `
-${academicLFI}, "${title}", ICLR Blogposts, 2025.
+${academicLFI}, "${title}", Blogposts, 2025.
 `.trim();
       document.getElementById("bibtex-academic-attribution").innerText = academicTemplate;
     }
